--- a/metal/Makefile
+++ b/metal/Makefile
@@ -2,7 +2,7 @@
 
 env ?= "prod"
 
-default: boot cluster
+default: k3d
 
 ~/.ssh/id_ed25519:
 	ssh-keygen -t ed25519 -P '' -f "$@"
@@ -20,3 +20,8 @@ cluster:
 console:
 	ansible-console \
 		--inventory inventories/${env}.yml
+
+k3d:
+	command -v k3d
+	k3d cluster create --config k3d-dev.yaml
+	k3d kubeconfig get homelab-dev > metal/kubeconfig.yaml
