build: change default target

--- a/metal/Makefile
+++ b/metal/Makefile
@@ -22,6 +22,5 @@ console:
 		--inventory inventories/${env}.yml
 
 k3d:
-	command -v k3d
-	k3d cluster create --config k3d-dev.yaml
+	k3d cluster start homelab-dev || k3d cluster create --config k3d-dev.yaml
 	k3d kubeconfig get homelab-dev > kubeconfig.yaml
